# plummerprimes

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/systeminformation/: cpu.rs  mod.rs  os.rs  system.rs
