[package]
name = "plummerprimes"
version = "0.2.1"
edition = "2021"
authors = ["Westly Ward <sonicrules1234@gmail.com>"]
description = "Builds, Runs, and reports benchmarks from https://github.com/PlummersSoftwareLLC/Primes"
license-file = "LICENSE"
repository = "https://github.com/sonicrules1234/plummerprimes"
readme = "README.md"
homepage = "https://github.com/sonicrules1234/plummerprimes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.2.1"
docker-api = "0.8.0"
futures-util = "0.3.18"
nix = "0.23.0"
regex = "1.5.4"
rmp-serde = "0.15.5"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.72"
smbios-lib = "0.8.0"
structopt = "0.3.25"
table_print = "0.1.0"
termsize = "0.1.6"
tokio = { version = "1.14.0", features = ["full"] }
ordered-float = { version = "2.8.0", features = ["serde"] }
chrono = "0.4.19"

[features]
